--- a/GD.FinishingSystem.WEB/Views/Shared/_Layout.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Shared/_Layout.cshtml
@@ -84,7 +84,7 @@
                         }
                         @if (User.IsInRole("RuloMigration", AuthType.Show))
                         {
-                            <a class="nav-link" asp-controller="RuloMigration" asp-action="Index">
+                            <a class="nav-link" asp-controller="Migration" asp-action="Index">
                                 <div class="sb-nav-link-icon">
                                     <i class="lni lni-cloud-upload"></i>
                                 </div>
