Update for the enabling of meter counters 2021-10-14

--- a/GD.FinishingSystem.WEB/Views/Rulo/CreateOrUpdate.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Rulo/CreateOrUpdate.cshtml
@@ -151,7 +151,10 @@
                     }
                     else
                     {
-                        <button type="submit" class="btn btn-success"><i class="lni lni-save"></i> Save Changes</button>
+                        if (Model.TestResultID == null) //If test result is null show button processes
+                        {
+                            <button type="submit" class="btn btn-success"><i class="lni lni-save"></i> Save Changes</button>
+                        }
                     }
                 </div>
 
