--- a/GD.FinishingSystem.WEB/Views/Rulo/Details.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Rulo/Details.cshtml
@@ -137,6 +137,10 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" class="btn btn-sm btn-success" asp-route-ruloid="@Model.RuloID"><i class="lni lni-slice"></i> Edit</a> |
+    @if (Model.TestResultID == null) //If test result is null show button processes
+    {
+        <a asp-action="Edit" class="btn btn-sm btn-success" asp-route-ruloid="@Model.RuloID"><i class="lni lni-slice"></i> Edit</a> 
+        Html.Raw(" | ");
+    }
     <a asp-action="Index" asp-route-positionruloid="@Model.RuloID" class="btn btn-sm btn-secondary"><i class="lni lni-chevron-left-circle"></i> Back to List</a>
 </div>
